Amarok update: ignore routers in watch mode

--- a/packages/backend/discovery/amarok/ethereum/config.jsonc
+++ b/packages/backend/discovery/amarok/ethereum/config.jsonc
@@ -36,6 +36,9 @@
   "maxDepth": 9,
   "initialAddresses": ["0x8898B472C54c31894e3B9bb83cEA802a5d0e63C6"],
   "overrides": {
+    "Connext Fee Multisig": {
+      "ignoreInWatchMode": ["nonce"]
+    },
     "ConnextBridge": {
       "fields": {
         "SEQUENCERS": {
@@ -71,7 +74,7 @@
           "severity": "LOW"
         }
       },
-      "ignoreInWatchMode": ["nonce", "proposedTimestamp"],
+      "ignoreInWatchMode": ["nonce", "proposedTimestamp", "ROUTERS"],
       "ignoreRelatives": ["lpTokenTargetAddress", "RELAYERS"]
     },
     "MainnetSpokeConnector": {
