--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -37,6 +37,7 @@
     "@koa/router": "^12.0.0",
     "@l2beat/backend-tools": "*",
     "@l2beat/config": "*",
+    "@l2beat/database": "*",
     "@l2beat/discovery": "*",
     "@l2beat/discovery-types": "*",
     "@l2beat/shared": "*",
