--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -17,9 +17,11 @@
     "@l2beat/backend": "*",
     "@l2beat/config": "*",
     "@l2beat/shared-pure": "*",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.37.1",
+    "@tanstack/react-table": "^8.17.3",
     "@trpc/client": "^11.0.0-rc.374",
     "@trpc/react-query": "^11.0.0-rc.374",
     "@trpc/server": "^11.0.0-rc.374",
