--- a/packages/backend/discovery/portal/ethereum/config.jsonc
+++ b/packages/backend/discovery/portal/ethereum/config.jsonc
@@ -4,15 +4,30 @@
   "name": "portal",
   "initialAddresses": [
     "0x98f3c9e6E3fAce36bAAd05FE09d375Ef1464288B",
-    "0x3ee18B2214AFF97000D974cf647E7C347E8fa585"
+    "0x3ee18B2214AFF97000D974cf647E7C347E8fa585",
+    "0x6FFd7EdE62328b3Af38FCD61461Bbfc52F5651fE",
+    "0x27428DD2d3DD32A4D7f7C497eAaa23130d894911",
+    "0xAaDA05BD399372f0b0463744C09113c137636f6a"
   ],
   "names": {
-    "0x98f3c9e6E3fAce36bAAd05FE09d375Ef1464288B": "Wormhole",
+    "0x98f3c9e6E3fAce36bAAd05FE09d375Ef1464288B": "WormholeCore",
     "0x3ee18B2214AFF97000D974cf647E7C347E8fa585": "TokenBridge",
-    "0x0fD04a68d3c3A692d6Fa30384D1A87Ef93554eE6": "TokenImplementation"
+    "0x0fD04a68d3c3A692d6Fa30384D1A87Ef93554eE6": "TokenImplementation",
+    "0x6FFd7EdE62328b3Af38FCD61461Bbfc52F5651fE": "NFTBridge",
+    "0xAaDA05BD399372f0b0463744C09113c137636f6a": "CircleIntegration"
   },
   "overrides": {
-    "Wormhole": {
+    "CircleIntegration": {
+      "ignoreRelatives": [
+        "circleBridge",
+        "circleTokenMinter",
+        "circleTransmitter"
+      ]
+    },
+    "NFTBridge": {
+      "ignoreMethods": ["splCache"]
+    },
+    "WormholeCore": {
       "ignoreMethods": ["quorum"],
       "fields": {
         "guardianSet": {
@@ -32,10 +47,7 @@
       }
     },
     "TokenBridge": {
-      "ignoreInWatchMode": ["totalSupply"]
-    },
-    "0x3ee18B2214AFF97000D974cf647E7C347E8fa585": {
-      "ignoreMethods": ["WETH"]
+      "ignoreRelatives": ["WETH"]
     }
   }
 }
