--- a/vercel.json
+++ b/vercel.json
@@ -26,22 +26,22 @@
       "destination": "https://api.l2beat.com/api/projects/:project/tvl/chains/:chain/assets/:asset/types/:type"
     },
     {
-      "source": "/api/tvl2/token",
+      "source": "/api/tvl/token",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://api-staging.eltwobeat.com/api/tvl2/token"
+      "destination": "https://api-staging.eltwobeat.com/api/tvl/token"
     },
     {
-      "source": "/api/tvl2/token",
-      "destination": "https://api.l2beat.com/api/tvl2/token"
+      "source": "/api/tvl/token",
+      "destination": "https://api.l2beat.com/api/tvl/token"
     },
     {
-      "source": "/api/tvl2/aggregate",
+      "source": "/api/tvl/aggregate",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://api-staging.eltwobeat.com/api/tvl2/aggregate"
+      "destination": "https://api-staging.eltwobeat.com/api/tvl/aggregate"
     },
     {
-      "source": "/api/tvl2/aggregate",
-      "destination": "https://api.l2beat.com/api/tvl2/aggregate"
+      "source": "/api/tvl/aggregate",
+      "destination": "https://api.l2beat.com/api/tvl/aggregate"
     },
     {
       "source": "/api/tvl/aggregate",
