Add taiko associated token to taiko

--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -1013,6 +1013,10 @@
       "address": "0x0f2D719407FdBeFF09D87557AbB7232601FD9F29"
     },
     {
+      "symbol": "TAIKO",
+      "address": "0x10dea67478c5F8C5E2D90e5E9B26dBe60c54d800"
+    },
+    {
       "symbol": "tBTC",
       "address": "0x18084fbA666a33d37592fA2633fD49a74DD93a88"
     },
