Add stargatev2 full (#3979)
Co-authored-by: Mateusz Radomski <radomski.main@protonmail.com>
Co-authored-by: sekuba <29250140+sekuba@users.noreply.github.com>
Co-authored-by: Luca Donno <30298476+lucadonnoh@users.noreply.github.com>

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -20,7 +20,8 @@
     "check-verified-contracts": "node -r esbuild-register scripts/checkVerifiedContracts",
     "tokens": "node -r esbuild-register scripts/tokens/tokens.ts",
     "tokens:verify": "sh scripts/tokens/verify.sh",
-    "coingecko:platforms": "node -r esbuild-register scripts/getCoingeckoPlatforms.ts"
+    "coingecko:platforms": "node -r esbuild-register scripts/getCoingeckoPlatforms.ts",
+    "stargatev2-pools": "node -r esbuild-register scripts/stargatev2-pools"
   },
   "dependencies": {
     "@l2beat/backend-tools": "*",
