--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -141,6 +141,7 @@
   "specular": true,
   "stack": true,
   "stargate": false,
+  "stargatev2": false,
   "starknet": true,
   "stealthchain": true,
   "superseed": true,
