--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -18,6 +18,7 @@
     "@l2beat/config": "*",
     "@l2beat/shared-pure": "*",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.37.1",
