Gathering economic security stake (#4149)

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -37,6 +37,7 @@
     "@koa/router": "^12.0.0",
     "@l2beat/backend-tools": "*",
     "@l2beat/config": "*",
+    "@l2beat/database": "*",
     "@l2beat/discovery": "*",
     "@l2beat/discovery-types": "*",
     "@l2beat/shared": "*",
@@ -65,6 +66,7 @@
     "readline-sync": "^1.4.10",
     "rimraf": "^5.0.0",
     "source-map-support": "^0.5.21",
+    "stream-json": "^1.8.0",
     "twitter-api-v2": "^1.14.0",
     "viem": "^2.8.14",
     "zod": "^3.22.2"
@@ -81,6 +83,7 @@
     "@types/pg": "8.6.5",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/stream-json": "^1.7.7",
     "@types/supertest": "^2.0.12",
     "comment-json": "^4.2.3",
     "supertest": "^6.2.3",
