--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "src/index.ts",
   "scripts": {
     "clean": "rm -rf dist",
     "build": "tsc",
     "db:generate": "prisma generate",
-    "format": "biome format .",
-    "format:fix": "biome format --write .",
+    "format": "prisma format && biome format .",
+    "format:fix": "prisma format && biome format --write .",
     "lint:fix": "biome check --formatter-enabled=false --apply .",
     "lint": "biome check --formatter-enabled=false .",
     "typecheck": "tsc --noEmit"
