--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -555,6 +555,10 @@
       "address": "0x1cEB5cB57C4D4E2b2433641b95Dd330A33185A44"
     },
     {
+      "symbol": "LAMB",
+      "address": "0x8971f9fd7196e5cEE2C1032B50F656855af7Dd26"
+    },
+    {
       "symbol": "LDO",
       "address": "0x5A98FcBEA516Cf06857215779Fd812CA3beF1B32"
     },
