add discovery, refine ts

--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -81,6 +81,7 @@
   "loopring": true,
   "lumia": true,
   "lyra": true,
+  "lzoftv2": true,
   "lzomnichain": false,
   "mantapacific": true,
   "mantle": true,
