--- a/packages/backend/discovery/lzoftv2/ethereum/config.jsonc
+++ b/packages/backend/discovery/lzoftv2/ethereum/config.jsonc
@@ -6,8 +6,27 @@
     "0x1a44076050125825900e736c501f859c50fE728c",
     "0xbB2Ea70C9E858123480642Cf96acbcCE1372dCe1",
     "0xc02Ab410f0734EFa3F14628780e6e695156024C2",
-    // escrows, OApps, OFTs from here
-    "0x58538e6A46E07434d7E7375Bc268D3cb839C0133" // ENAOFTAdapter
+    // escrows, OApps, OFTs from here ---------------------------------------------
+    "0x58538e6A46E07434d7E7375Bc268D3cb839C0133", // ENAOFTAdapter
+    "0xCB07992DE144bDeE56fDb66Fff2454B43243b052", // CyberTokenAdapter1
+    "0x3d2fe83ea885C2E43A422C82C738847669708210", // CyberTokenAdapter2
+    "0x17Ce6AEc7FD1aCcB5C0B2712eDDeFf8939BAB91E", // TRESTLE_OFTAdapter
+    "0x0ab9EfCb9DF64D575085A8d1eF7b961b57785aA2", // WTIA_OFTAdapter
+    "0x6182995916d79DeDb60db1570776F9994fCdCA0a", // ParamOFTAdapter
+    "0xdDF5a3259a88Ab79D5530eB3eB14c1C92CD97FCf", // KinetixFinanceTokenOFTAdapter
+    "0xAd6cA80Fe4D3c54f6433fF725d744772AaE87711", // WooTokenOFTAdapter
+    "0x3e52fd3383E1ee6D3959Ce5c6Aa9d1fCb46AbFA6", // MysoOFTAdapter
+    "0xFE7fe01F8B9A76803aF3750144C2715D9bcf7D0D", // EtherFiOFTAdapter_weETH
+    "0xe4796cCB6bB5DE2290C417Ac337F2b66CA2E770E", // StakedFraxOFTAdapter
+    "0x1f55a02A049033E3419a8E2975cF3F572F4e6E9A", // StakedFraxEtherOFTAdapter
+    "0x23432452B720C80553458496D4D9d7C5003280d0", // FraxSharesOFTAdapter
+    "0x801642B6efB861fE624dAD704b7A747779d9B433", // MyOFTAdapterPEAS
+    "0x5d3a1Ff2b6BAb83b63cd9AD0787074081a52ef34", // USDeOFTAdapter
+    "0x211Cc4DD073734dA055fbF44a2b4667d5E5fE5d2", // StakedUSDeOFTAdapter
+    "0x1762c17f671FA27cE6C59256f5F28242de9274d0", // TBankOFT
+    "0x1cd5b73d12CB23b2835C873E4FaFfE83bBCef208", // DineroOFTLockboxPXETH
+    "0xE6C2B672B3eB64A1F460AdcD9676a3B6c67abD4D", // MaviaOFTAdapter
+    "0x85d456B2DfF1fd8245387C0BfB64Dfb700e98Ef3" // RSETH_OFTAdapter
   ],
   "names": {
     "0x1a44076050125825900e736c501f859c50fE728c": "EndpointV2",
@@ -91,6 +110,82 @@
       }
     },
     "0x58538e6A46E07434d7E7375Bc268D3cb839C0133": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0xCB07992DE144bDeE56fDb66Fff2454B43243b052": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x3d2fe83ea885C2E43A422C82C738847669708210": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x17Ce6AEc7FD1aCcB5C0B2712eDDeFf8939BAB91E": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x0ab9EfCb9DF64D575085A8d1eF7b961b57785aA2": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x6182995916d79DeDb60db1570776F9994fCdCA0a": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0xdDF5a3259a88Ab79D5530eB3eB14c1C92CD97FCf": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0xAd6cA80Fe4D3c54f6433fF725d744772AaE87711": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x3e52fd3383E1ee6D3959Ce5c6Aa9d1fCb46AbFA6": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0xFE7fe01F8B9A76803aF3750144C2715D9bcf7D0D": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0xe4796cCB6bB5DE2290C417Ac337F2b66CA2E770E": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x1f55a02A049033E3419a8E2975cF3F572F4e6E9A": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x23432452B720C80553458496D4D9d7C5003280d0": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x801642B6efB861fE624dAD704b7A747779d9B433": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x5d3a1Ff2b6BAb83b63cd9AD0787074081a52ef34": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x211Cc4DD073734dA055fbF44a2b4667d5E5fE5d2": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x1762c17f671FA27cE6C59256f5F28242de9274d0": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x1cd5b73d12CB23b2835C873E4FaFfE83bBCef208": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0xE6C2B672B3eB64A1F460AdcD9676a3B6c67abD4D": {
+      "ignoreMethods": ["token"],
+      "ignoreRelatives": ["owner"]
+    },
+    "0x85d456B2DfF1fd8245387C0BfB64Dfb700e98Ef3": {
       "ignoreMethods": ["token"],
       "ignoreRelatives": ["owner"]
     }
