--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -160,6 +160,7 @@
   "termstructure": true,
   "teva": true,
   "tradable": true,
+  "transporter": true,
   "world": true,
   "wormholeV1": true,
   "xai": true,
