--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -74,6 +74,7 @@
   "lambda": true,
   "layer2finance": true,
   "layer2financezk": false,
+  "layerzerov2oft": true,
   "lens": true,
   "lightlink": true,
   "linea": true,
@@ -81,7 +82,6 @@
   "loopring": true,
   "lumia": true,
   "lyra": true,
-  "lzoftv2": true,
   "lzomnichain": false,
   "mantapacific": true,
   "mantle": true,
