--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -112,6 +112,7 @@
   "palm": true,
   "paradex": true,
   "parallel": true,
+  "payy": true,
   "playchain": true,
   "pNetwork": true,
   "polygon-miden": true,
