stablecoin where aplicable

--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -2078,12 +2078,14 @@
     {
       "symbol": "USDC",
       "address": "0x09Bc4E0D864854c6aFB6eB9A9cdF58aC190D0dF9",
+      "category": "stablecoin",
       "source": "canonical",
       "supply": "zero"
     },
     {
       "symbol": "USDT",
       "address": "0x201EBa5CC46D216Ce6DC03F6a759e8E766e956aE",
+      "category": "stablecoin",
       "source": "canonical",
       "supply": "zero"
     },
