--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -1225,6 +1225,13 @@
   ],
   "arbitrum": [
     {
+      "symbol": "USDT",
+      "address": "0xFd086bC7CD5C481DCC9C85ebE478A1C0b69FCbb9",
+      "category": "stablecoin",
+      "source": "canonical",
+      "supply": "zero"
+    },
+    {
       "symbol": "FRAX",
       "address": "0x17FC002b466eEc40DaE837Fc4bE5c67993ddBd6F",
       "category": "stablecoin",
@@ -1549,6 +1556,13 @@
     }
   ],
   "optimism": [
+    {
+      "symbol": "USDT",
+      "address": "0x94b008aA00579c1307B0EF2c499aD98a8ce58e58",
+      "category": "stablecoin",
+      "source": "canonical",
+      "supply": "zero"
+    },
     {
       "symbol": "ETH",
       "source": "canonical",
@@ -2056,7 +2070,28 @@
   ],
   "mantle": [
     {
-      "symbol": "ETH",
+      "symbol": "mETH",
+      "address": "0xcDA86A272531e8640cD7F1a92c01839911B90bb0",
+      "source": "canonical",
+      "supply": "zero"
+    },
+    {
+      "symbol": "USDC",
+      "address": "0x09Bc4E0D864854c6aFB6eB9A9cdF58aC190D0dF9",
+      "category": "stablecoin",
+      "source": "canonical",
+      "supply": "zero"
+    },
+    {
+      "symbol": "USDT",
+      "address": "0x201EBa5CC46D216Ce6DC03F6a759e8E766e956aE",
+      "category": "stablecoin",
+      "source": "canonical",
+      "supply": "zero"
+    },
+    {
+      "symbol": "WETH",
+      "address": "0xdEAddEaDdeadDEadDEADDEAddEADDEAddead1111",
       "source": "canonical",
       "supply": "zero",
       "category": "ether"
@@ -2511,7 +2546,31 @@
       }
     }
   ],
+  "metis": [
+    {
+      "symbol": "WETH",
+      "address": "0x420000000000000000000000000000000000000A",
+      "coingeckoId": "ethereum",
+      "source": "canonical",
+      "supply": "zero",
+      "category": "ether"
+    },
+    {
+      "symbol": "m.USDT",
+      "address": "0xbB06DCA3AE6887fAbF931640f67cab3e3a16F4dC",
+      "coingeckoId": "tether",
+      "source": "canonical",
+      "supply": "zero",
+      "category": "stablecoin"
+    }
+  ],
   "scroll": [
+    {
+      "symbol": "ETH",
+      "source": "canonical",
+      "supply": "zero",
+      "category": "ether"
+    },
     {
       "symbol": "rsETH",
       "address": "0x65421ba909200b81640d98B979d07487C9781B66",
