--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -2196,6 +2196,27 @@
     }
   ],
   "linea": [
+  {
+    "symbol": "wBTC",
+    "address": "0x3aAB2285ddcDdaD8edf438C1bAB47e1a9D05a9b4",
+    "coingeckoId": "wrapped-bitcoin",
+    "source": "canonical",
+    "supply": "zero"
+  },
+    {
+      "symbol": "USDC.e",
+      "address": "0x176211869cA2b568f2A7D4EE941E073a821EE1ff",
+      "category": "stablecoin",
+      "source": "canonical",
+      "supply": "zero"
+    },
+    {
+      "symbol": "USDT",
+      "address": "0xA219439258ca9da29E9Cc4cE5596924745e12B93",
+      "category": "stablecoin",
+      "source": "canonical",
+      "supply": "zero"
+    },
     {
       "symbol": "ETH",
       "source": "canonical",
