Orbit update: new unverified PolicyAdmin

--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -27,6 +27,7 @@
   "canvasconnect": true,
   "capx": true,
   "cbridge": true,
+  "celo": true,
   "chainport": false,
   "connext": true,
   "coti": true,
