--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -19,6 +19,7 @@
     "@l2beat/database": "*",
     "@l2beat/shared-pure": "*",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.10.1",
