--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -2193,6 +2193,11 @@
   ],
   "mantle": [
     {
+      "symbol": "MNT",
+      "source": "canonical",
+      "supply": "zero"
+    },
+    {
       "symbol": "wMNT",
       "address": "0x78c1b0C915c4FAA5FffA6CAbf0219DA63d7f4cb8",
       "source": "canonical",
