fix usdt on metis (m.USDT is not a valid symbol)

--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -2716,7 +2716,7 @@
       "category": "ether"
     },
     {
-      "symbol": "m.USDT",
+      "symbol": "USDT",
       "address": "0xbB06DCA3AE6887fAbF931640f67cab3e3a16F4dC",
       "coingeckoId": "tether",
       "source": "canonical",
