Add LayerZero v2 OFTs (Bridge, full) (#4211)
Co-authored-by: sekuba <29250140+sekuba@users.noreply.github.com>

--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -74,6 +74,7 @@
   "lambda": true,
   "layer2finance": true,
   "layer2financezk": false,
+  "layerzerov2oft": true,
   "lens": true,
   "lightlink": true,
   "linea": true,
