--- a/packages/backend/discovery/_templates/transporter/OnRampV2/template.jsonc
+++ b/packages/backend/discovery/_templates/transporter/OnRampV2/template.jsonc
@@ -4,7 +4,7 @@
     "getNops",
     "getAllowList",
     "getStaticConfig",
-    "currentRateLimiterState",
+    "currentRateLimiterState"
   ],
   "ignoreRelatives": [
     "getSupportedTokens",
