LayerZeroOFTs: ignore Verifier fees

--- a/packages/backend/discovery/layerzerov2oft/ethereum/config.jsonc
+++ b/packages/backend/discovery/layerzerov2oft/ethereum/config.jsonc
@@ -44,7 +44,8 @@
         "mptValidator",
         "owner",
         "zkMptValidator"
-      ]
+      ],
+      "ignoreMethods": ["feeBalance"]
     },
     "SendUln302": {
       "fields": {
