--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -5,6 +5,10 @@
       "address": "0xde8cd13b812bcd82218754a740b27e76ec1e86ad"
     },
     {
+      "symbol": "ZRO",
+      "address": "0x6985884c4392d348587b19cb9eaaf157f13271cd"
+    },
+    {
       "symbol": "wTIA",
       "address": "0x6ad2d2c22bb58ea94be18cff11ef67e8bb97b652"
     },
