Socket: New counter plug, refreshed script output

--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -140,7 +140,7 @@
   "satellite": true,
   "scroll": true,
   "skale-ima": true,
-  "socket": true,
+  "socket": false,
   "sollet": true,
   "sophon": true,
   "sorare": true,
