Add One Single Token And Break Nothing In The Process (#4237)
Co-authored-by: sekuba <29250140+sekuba@users.noreply.github.com>
Co-authored-by: maciekzygmunt <maciekzygmunt@interia.pl>

--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -1603,6 +1603,12 @@
   ],
   "optimism": [
     {
+      "symbol": "wBTC",
+      "address": "0x68f180fcCe6836688e9084f035309E29Bf0A2095",
+      "source": "canonical",
+      "supply": "zero"
+    },
+    {
       "symbol": "ZRO",
       "address": "0x6985884C4392D348587B19cb9eAAf157F13271cd",
       "source": "native",
