--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:frontend": "turbo run build --filter=@l2beat/frontend",
     "build:frontend2": "turbo run build --filter=@l2beat/frontend2",
     "build:dependencies": "turbo run build --filter=@l2beat/frontend^... --filter=@l2beat/frontend2^... --filter=@l2beat/backend^...",
+    "watch:dependencies": "turbo watch build --filter=@l2beat/frontend^... --filter=@l2beat/frontend2^... --filter=@l2beat/backend^...",
     "clean": "turbo run clean",
     "fix": "yarn lint:fix && yarn format:fix",
     "format": "wsrun -ecam format",
