--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -1110,6 +1110,14 @@
       "address": "0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984"
     },
     {
+      "symbol": "uniETH",
+      "address": "0xF1376bceF0f78459C0Ed0ba5ddce976F1ddF51F4"
+    },
+    {
+      "symbol": "mswETH",
+      "address": "0x32bd822d615A3658A68b6fDD30c2fcb2C996D678"
+    },
+    {
       "symbol": "UOS",
       "address": "0xD13c7342e1ef687C5ad21b27c2b65D772cAb5C8c"
     },
