--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -43,11 +43,13 @@
   "degen": true,
   "deri": true,
   "deversifi": true,
+  "dodochain": true,
   "dydx": true,
   "eclipse": true,
   "edgeless": true,
   "ethernity": true,
   "everclear": true,
+  "fhenix": true,
   "form": true,
   "frame": true,
   "fraxferry": true,
@@ -116,6 +118,7 @@
   "parallel": true,
   "payy": true,
   "playchain": true,
+  "plumenetwork": true,
   "pNetwork": true,
   "polygon-miden": true,
   "polygon-plasma": false,
