--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     {
       "source": "/api/projects/:project/tvl/assets/:asset",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://api-staging.eltwobeat.com/api/projects/:project/tvl/assets/:asset"
+      "destination": "https://staging.l2beat.com/api/projects/:project/tvl/assets/:asset"
     },
     {
       "source": "/api/projects/:project/tvl/assets/:asset",
@@ -19,7 +19,7 @@
     {
       "source": "/api/projects/:project/tvl/chains/:chain/assets/:asset/types/:type",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://api-staging.eltwobeat.com/api/projects/:project/tvl/chains/:chain/assets/:asset/types/:type"
+      "destination": "https://staging.l2beat.com/api/projects/:project/tvl/chains/:chain/assets/:asset/types/:type"
     },
     {
       "source": "/api/projects/:project/tvl/chains/:chain/assets/:asset/types/:type",
@@ -28,7 +28,7 @@
     {
       "source": "/api/tvl/token",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://api-staging.eltwobeat.com/api/tvl/token"
+      "destination": "https://staging.l2beat.com/api/tvl/token"
     },
     {
       "source": "/api/tvl/token",
@@ -37,7 +37,7 @@
     {
       "source": "/api/tvl/aggregate",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://api-staging.eltwobeat.com/api/tvl/aggregate"
+      "destination": "https://staging.l2beat.com/api/tvl/aggregate"
     },
     {
       "source": "/api/tvl/aggregate",
@@ -46,7 +46,7 @@
     {
       "source": "/api/tvl/aggregate",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://api-staging.eltwobeat.com/api/tvl/aggregate"
+      "destination": "https://staging.l2beat.com/api/tvl/aggregate"
     },
     {
       "source": "/api/tvl/aggregate",
@@ -55,7 +55,7 @@
     {
       "source": "/api/activity/aggregate",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://api-staging.eltwobeat.com/api/activity/aggregate"
+      "destination": "https://staging.l2beat.com/api/activity/aggregate"
     },
     {
       "source": "/api/activity/aggregate",
