--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -18,6 +18,7 @@
     "@l2beat/config": "*",
     "@l2beat/database": "*",
     "@l2beat/shared-pure": "*",
+    "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-tabs": "^1.0.4",
