Arbitrum: LPT, MOR, USD+

--- a/packages/backend/discovery/arbitrum/ethereum/config.jsonc
+++ b/packages/backend/discovery/arbitrum/ethereum/config.jsonc
@@ -7,7 +7,8 @@
     "0xa3A7B6F88361F48403514059F1F16C8E78d60EeC",
     "0xcEe284F754E854890e311e3280b767F80797180d",
     "0xD3B5b60020504bc3489D6949d545893982BA3011",
-    "0x0F25c1DC2a9922304f2eac71DCa9B07E310e8E5a"
+    "0x0F25c1DC2a9922304f2eac71DCa9B07E310e8E5a",
+    "0x6A23F4940BD5BA117Da261f98aae51A8BFfa210A"
   ],
   "names": {
     "0x8315177aB297bA92A06054cE80a67Ed4DBd7ed3a": "ArbitrumOneBridge",
@@ -31,7 +32,8 @@
     "0x3e40D73EB977Dc6a537aF587D48316feE66E9C8c": "wstETHEscrowAdmin",
     "0x73b047fe6337183A454c5217241D780a932777bD": "LidoEmergencyBrakeMultisig",
     "0xC234E41AE2cb00311956Aa7109fC801ae8c80941": "ValidatorOwnerMultisig",
-    "0xd0FDA6925f502a3a94986dfe7C92FE19EBbD679B": "BatchPosterManagerMultisig"
+    "0xd0FDA6925f502a3a94986dfe7C92FE19EBbD679B": "BatchPosterManagerMultisig",
+    "0x6A23F4940BD5BA117Da261f98aae51A8BFfa210A": "LPTL1Escrow"
   },
   "overrides": {
     "ArbitrumOneBridge": {
