--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -716,6 +716,10 @@
       "address": "0xB62132e35a6c13ee1EE0f84dC5d40bad8d815206"
     },
     {
+      "symbol": "NEXT",
+      "address": "0xFE67A4450907459c3e1FFf623aA927dD4e28c67a"
+    },
+    {
       "symbol": "NFT",
       "address": "0xEF40B859D21e4d566a3d713e756197c021BffaAa",
       "coingeckoId": "apenft"
@@ -1269,6 +1273,16 @@
   ],
   "arbitrum": [
     {
+      "symbol": "MOR",
+      "address": "0x092bAaDB7DEf4C3981454dD9c0A0D7FF07bCFc86",
+      "source": "native",
+      "supply": "totalSupply",
+      "bridgedUsing": {
+        "bridge": "Layer Zero v2 OFT",
+        "slug": "layerzerov2oft"
+      }
+    },
+    {
       "symbol": "ZRO",
       "address": "0x6985884C4392D348587B19cb9eAAf157F13271cd",
       "source": "native",
@@ -1621,6 +1635,12 @@
     }
   ],
   "optimism": [
+    {
+      "symbol": "USDC.e",
+      "address": "0x7F5c764cBc14f9669B88837ca1490cCa17c31607",
+      "source": "canonical",
+      "supply": "zero"
+    },
     {
       "symbol": "wBTC",
       "address": "0x68f180fcCe6836688e9084f035309E29Bf0A2095",
