Get Orbit Sequencers and Validators from discovery by Roles

--- a/packages/backend/discovery/_templates/orbitstack/RollupProxy/template.jsonc
+++ b/packages/backend/discovery/_templates/orbitstack/RollupProxy/template.jsonc
@@ -42,6 +42,9 @@
       }
     },
     "validators": {
+      "target": {
+        "role": "Validator"
+      },
       "handler": {
         "type": "arbitrumActors",
         "actorType": "validator"
