--- a/packages/backend/discovery/parallel/ethereum/config.jsonc
+++ b/packages/backend/discovery/parallel/ethereum/config.jsonc
@@ -76,6 +76,9 @@
           }
         },
         "batchPosters": {
+          "target": {
+            "role": "Sequencer"
+          },
           "handler": {
             "type": "arbitrumActors",
             "actorType": "batchPoster"
