--- a/packages/backend/discovery/kinto/ethereum/config.jsonc
+++ b/packages/backend/discovery/kinto/ethereum/config.jsonc
@@ -94,6 +94,9 @@
           }
         },
         "batchPosters": {
+          "target": {
+            "role": "Sequencer"
+          },
           "handler": {
             "type": "arbitrumActors",
             "actorType": "batchPoster"
