--- a/packages/backend/discovery/molten/arbitrum/config.jsonc
+++ b/packages/backend/discovery/molten/arbitrum/config.jsonc
@@ -62,6 +62,9 @@
           }
         },
         "batchPosters": {
+          "target": {
+            "role": "Sequencer"
+          },
           "handler": {
             "type": "arbitrumActors",
             "actorType": "batchPoster"
