--- a/packages/backend/discovery/rari/arbitrum/config.jsonc
+++ b/packages/backend/discovery/rari/arbitrum/config.jsonc
@@ -74,6 +74,9 @@
           }
         },
         "batchPosters": {
+          "target": {
+            "role": "Sequencer"
+          },
           "handler": {
             "type": "arbitrumActors",
             "actorType": "batchPoster"
