Add Roles to arbitrum config

--- a/packages/backend/discovery/arbitrum/ethereum/config.jsonc
+++ b/packages/backend/discovery/arbitrum/ethereum/config.jsonc
@@ -98,6 +98,9 @@
           }
         },
         "batchPosters": {
+          "target": {
+            "role": "Sequencer"
+          },
           "handler": {
             "type": "arbitrumActors",
             "actorType": "batchPoster"
