--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -2609,8 +2609,8 @@
       "symbol": "BLAST",
       "address": "0xb1a5700fA2358173Fe465e6eA4Ff52E36e88E2ad",
       "source": "native",
-      "supply": "circulatingSupply",
-  }
+      "supply": "circulatingSupply"
+    }
   ],
   "mode": [
     {
