--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -6,5 +6,6 @@
     "noUncheckedIndexedAccess": true,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["**/*.test.ts", "**/test"]
 }
