--- a/packages/database/.mocharc.json
+++ b/packages/database/.mocharc.json
@@ -1,6 +1,6 @@
 {
   "spec": ["src/**/*.test.ts"],
-  "require": ["esbuild-register"],
+  "require": "esbuild-register",
   "watchExtensions": "ts",
   "extension": "ts",
   "file": "src/test/setup.ts",
